--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,10 @@
-name: Node.js CI
+name: myCI
 
 on:
   push:
-    branches: [master, dev/*]
+    branches: [master]
   pull_request:
-    branches: [master, dev/*]
+    branches: [master]
 
 jobs:
   build:
@@ -23,5 +23,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - run: npm build
       - run: npm run test
       - run: npm run lint
