--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,8 +23,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install dependencies
-        run: npm install
+      #- name: Install dependencies
+        #run: npm install
+      - run: npm ci  
       - run: npm run build
       - run: npm run test -- --watch=false --browsers=ChromeHeadless
       - run: npm run lint
