--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,8 @@ jobs:
         #run: npm install
       - run: npm ci  
       - run: npm run build
-      #- run: npm run test -- --watch=false --browsers=ChromeHeadless
-      - run: npm run test -- --configuration=ci
-      - run: npm run e2e -- --configuration=ci
+      - run: npm run test -- --watch=false --browsers=ChromeHeadless
+      #- run: npm run test -- --configuration=ci
+      #- run: npm run e2e -- --configuration=ci
+      - run: npm run e2e
       - run: npm run lint
