--- a/angular/nginx.conf
+++ b/angular/nginx.conf
@@ -1,44 +1,30 @@
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
+user                 nginx;
+pid                  /var/run/nginx.pid;
+worker_processes     auto;
+error_log  /var/log/nginx/error.log notice;
 
-events {
-  worker_connections 768;
+events {                                                                     
+    worker_connections  1024;                                                
+}  
+
+http {                                     
+    include       /etc/nginx/mime.types;   
+    default_type  application/octet-stream;
+    server_tokens off;
+                                           
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '            
+                      '"$http_user_agent" "$http_x_forwarded_for"';          
+                                                                             
+    
+    access_log  /var/log/nginx/access.log;                             
+                                                                             
+    sendfile        on;                                                      
+    tcp_nopush     on;                                                      
+                                                                             
+    keepalive_timeout  65;                                                   
+                                                                             
+    gzip  on;                                                               
+                                                                   
+    include /etc/nginx/conf.d/*.conf;                              
 }
-
-http {
-  sendfile on;
-  tcp_nopush on;
-  tcp_nodelay on;
-  keepalive_timeout 65;
-  types_hash_max_size 2048;
-  include /etc/nginx/mime.types;
-  default_type application/octet-stream;
-
-  ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
-  ssl_prefer_server_ciphers on;
-
-  access_log /var/log/nginx/access.log;
-  error_log /var/log/nginx/error.log;
-
-  gzip on;
-
-  include /etc/nginx/conf.d/*.conf;
-
-  server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    root /var/www/html;
-    index index.html index.htm index.nginx-debian.html;
-
-    server_name _;
-
-    location / {
-      try_files $uri $uri/ =404;
-    }
-
-  }
-
-}
-
