--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,14 +11,11 @@ jobs:
       packages: write #permissions for publishing Docker images to Github Packages
       actions: read   #permissions for GitHub Apps to extract workflow execution time via REST API
 
-    defaults:
-      run:
-        working-directory: angular 
     steps:
       - name: Job's running time
         id: execution_time
         run: |
           curl \
             -H "Accept: application/vnd.github+json" \ 
-            -H "Authorization: ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/${{ github.actor }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/timing
