--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,5 @@ jobs:
         run: |
           curl \
             -H "Accept: application/vnd.github+json" \ 
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: token ${{ secrets.API_TOKEN }}" \
             https://api.github.com/repos/${{ github.repository }}/actions/runs/2709362699/timing
