--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
           #curl \
             #-H "Accept: application/vnd.github+json" \ 
             #-H "Authorization: token ${{ secrets.API_TOKEN }}" \
-            #https://api.github.com/repos/${{ github.repository }}/actions/runs/2709362699/timing
+            #https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/timing
