--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Job's running time
         id: execution_time
         #run: curl https://api.github.com/repos/haishulud/angular-react-starter/actions/runs/2709362699/timing
-        run: curl https://api.github.com/repos/${{ github.repository }}/actions/runs/2709362699/timing
+        run: curl https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/timing
         #run: |
           #curl \
             #-H "Accept: application/vnd.github+json" \ 
