--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,7 @@ jobs:
         #run: curl https://api.github.com/repos/haishulud/angular-react-starter/actions/runs/2709362699/timing
         #run: curl https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/timing
         run: |
-          curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/2709362699/timing 
-        #| jq run_duration_ms
+          curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/2709362699/timing | jq run_duration_ms
         #run: |
           #curl \
             #-H "Accept: application/vnd.github+json" \ 
