--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,11 +16,11 @@ jobs:
         id: execution_time
         #run: curl https://api.github.com/repos/haishulud/angular-react-starter/actions/runs/2709362699/timing
         #run: curl https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/timing
-        run: |
-          curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/2709362699/timing | jq '.job_id'
-          #run_duration_ms
         #run: |
           #curl \
             #-H "Accept: application/vnd.github+json" \ 
             #-H "Authorization: token ${{ secrets.API_TOKEN }}" \
             #https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/timing
+
+        run: |
+          curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/2709362699/timing | jq '.run_duration_ms'
