--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,7 @@ jobs:
           #https://api.github.com/repos/${{ github.repository }}/actions/runs/2709362699/timing
           #| jq '.run_duration_ms'
 
-        run: echo "::set-output name=runningtime::$(curl -s -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/2709362699/timing | jq '.run_duration_ms')"
+        run: echo "::set-output name=runningtime::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/2709362699/timing | jq '.run_duration_ms')"
+      
       - name: print variable
         run: echo ${{steps.execution_time.outputs.runningtime}}
