--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,3 +32,4 @@ jobs:
       
       - name: print variable
         run: echo ${{steps.execution_time.outputs.runningtime}}
+      - run: echo ${{jobs.job_id}}
