--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -128,8 +128,10 @@ jobs:
         id: execution_time
         run: |
           echo "::set-output name=runningtime::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ needs.main_job.outputs.output1 }}/timing | jq '.run_duration_ms')"
-      
+      - run |
+          echo ${{needs.job_id}}
       - name: print variable
-        run: echo ${{steps.execution_time.outputs.runningtime}}
+        run: |
+          echo ${{steps.execution_time.outputs.runningtime}}
 
         #for email status needs.<job_id>.result
