--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -129,7 +129,7 @@ jobs:
         run: |
           echo "::set-output name=runningtime::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ needs.main_job.outputs.output1 }}/timing | jq '.run_duration_ms')"
       - run |
-          echo ${{needs.job_id}}
+          echo $BUILD_ID
       - name: print variable
         run: |
           echo ${{steps.execution_time.outputs.runningtime}}
