--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -127,9 +127,9 @@ jobs:
       - name: Email job running time
         id: execution_time
         run: |
-          echo "::set-output name=runningtime::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ needs.main_job.outputs.output1 }}/timing | jq '.run_duration_ms')"
-      - run |
-          echo ${{$BUILD_ID}}
+          echo "::set-output name=runningtime::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs.0.started_at')"
+        #run: |
+        #  echo "::set-output name=runningtime::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ needs.main_job.outputs.output1 }}/timing | jq '.run_duration_ms')"
       - name: print variable
         run: |
           echo ${{steps.execution_time.outputs.runningtime}}
