--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,5 +32,14 @@ jobs:
       
       - name: print variable
         run: echo ${{steps.execution_time.outputs.runningtime}}
-      - run: |
-          echo ${{jobs.job_id}}
+      - name: calculate time
+        run: |
+          started_at='2020-01-20T17:42:40Z'
+          completed_at='2020-01-20T17:44:39Z'
+
+          START_TIME=$(date -d "$started_at" +%s)
+          END_TIME=$(date -d "$completed_at" +%s)
+
+          ELAPSE=$(( $END_TIME - $START_TIME ))
+          echo $ELAPSE
+          echo "$(($ELAPSE/60))m $(($ELAPSE%60))s"
