--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -133,7 +133,44 @@ jobs:
       - name: print variable
         run: |
           echo ${{steps.execution_time.outputs.starttime}} && echo ${{steps.execution_time.outputs.endtime}}
+      - name: calculate time
+        id: calculate_time
+        run: |
+          started_at='${{steps.execution_time.outputs.starttime}}'
+          completed_at='${{steps.execution_time.outputs.endtime}}'
 
-      
+          START_TIME=$(date -d "$started_at" +%s)
+          END_TIME=$(date -d "$completed_at" +%s)
 
+          ELAPSE=$(( $END_TIME - $START_TIME ))
+          echo $ELAPSE
+          echo "$(($ELAPSE/60/60))h $(($ELAPSE/60))m $(($ELAPSE%60))s"
+          echo "::set-output name=elpsd::$ELAPSE"
+
+      #---Email notifications v2 with elapsed time---
+      - name: Send email notifications for this job v2
+        if: ${{ always() }} #run this step even if any previous step failed
+        uses: dawidd6/action-send-mail@6d23605227c578d570e5594931720f85a1af55a2
+        with:
+          # SMTP server address
+          server_address: ${{secrets.MAIL_SERVER}}
+          # SMTP server port
+          server_port: 465 #587
+          # Authenticate as this user to SMTP server
+          username: ${{secrets.MAIL_USERNAME}}
+          # Authenticate with this password to SMTP server
+          password: ${{secrets.MAIL_PASSWORD}}
+          # Subject of mail message
+          subject: Github Actions job result
+          # Recipients mail addresses (separated with comma)
+          to: ave.alexey@gmail.com
+          # Full name of mail sender (might be with an email address specified in <>)
+          from: Github CI
+          # Whether this connection use TLS (default is true if server_port is 465)
+          secure: true
+          # Body of mail message (might be a filename prefixed with file:// to read from)
+          body: Build job of ${{github.repository}} completed. Result status ${{job.status}}. Time ${{steps.calculate_time.outputs.elpsd}} #Result conclusion ${{job.conclusion}}
+          # Allow unsigned/invalid certificates
+          ignore_cert: true
+          
         #for email status needs.<job_id>.result
