--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -169,7 +169,7 @@ jobs:
           # Whether this connection use TLS (default is true if server_port is 465)
           secure: true
           # Body of mail message (might be a filename prefixed with file:// to read from)
-          body: Build job of ${{github.repository}} completed. Result status ${{job.status}}. Time ${{steps.calculate_time.outputs.elpsd}} #Result conclusion ${{job.conclusion}}
+          body: Build job of ${{github.repository}} completed. "Result status:" ${{job.status}}. Time $((${{steps.calculate_time.outputs.elpsd}}/60/60))h $((${{steps.calculate_time.outputs.elpsd}}/60))m $(($ELAPSE%60))s (${{steps.calculate_time.outputs.elpsd}})s #Result conclusion ${{job.conclusion}}
           # Allow unsigned/invalid certificates
           ignore_cert: true
           
