--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -144,10 +144,11 @@ jobs:
 
           ELAPSE=$(( $END_TIME - $START_TIME ))
           echo $ELAPSE
-          echo $ELAPSE+%T
-          echo $ELAPSE +%T
-          echo "$(($ELAPSE/60/60))h $(($ELAPSE/60))m $(($ELAPSE%60))s"
+          echo "$(($ELAPSE/60/60))h $(($ELAPSE/60%60))m $(($ELAPSE%60))s"
           echo "::set-output name=elpsd::$ELAPSE"
+          echo "::set-output name=el_hours::$(($ELAPSE/60/60))"
+          echo "::set-output name=el_minutes::$(($ELAPSE/60%60))"
+          echo "::set-output name=el_seconds::$(($ELAPSE%60))"
 
       #---Email notifications v2 with elapsed time---
       - name: Send email notifications for this job v2
@@ -171,7 +172,7 @@ jobs:
           # Whether this connection use TLS (default is true if server_port is 465)
           secure: true
           # Body of mail message (might be a filename prefixed with file:// to read from)
-          body: Build job of ${{github.repository}} completed. "Result status:" ${{job.status}}. Time $((${{steps.calculate_time.outputs.elpsd}}/60/60))h $((${{steps.calculate_time.outputs.elpsd}}/60))m $(($ELAPSE%60))s (${{steps.calculate_time.outputs.elpsd}})s #Result conclusion ${{job.conclusion}}
+          body: Build job of ${{github.repository}} completed. "Result status:" ${{job.status}}. Time ${{steps.calculate_time.outputs.el_hours}}h ${{steps.calculate_time.outputs.el_minutes}}m ${{steps.calculate_time.outputs.el_seconds}}s (Total in seconds ${{steps.calculate_time.outputs.elpsd}}) #Result conclusion ${{job.conclusion}}
           # Allow unsigned/invalid certificates
           ignore_cert: true
           
