--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,7 @@
 name: myCI
 
 on:
-  workflow_dispatch: #manual start from Github UI
+  workflow_dispatch: #manual start from Github UI or API
   #push:
     #branches: master
   #pull_request:
@@ -13,11 +13,7 @@ jobs:
     permissions:      
       contents: read  #permissions for publishing Docker images to Github Packages
       packages: write #permissions for publishing Docker images to Github Packages
-      #actions: read   #permissions for GitHub Apps to extract workflow execution time via REST API (strangelly everything  works without this line)
-    
-    outputs:
-      output1: ${{steps.get_run_id.outputs.jobsrunid}} #map a step output to a job output
-
+          
     defaults:
       run:
         working-directory: angular 
@@ -36,7 +32,7 @@ jobs:
       
       - name: Install dependencies
         #run: npm install
-        run: npm ci  		#"ci" is faster than "install" (theoretically?)
+        run: npm ci  		#"ci" is (theoretically?) faster than "install"
       
       - name: Buld phase
         run: npm run build
@@ -45,12 +41,6 @@ jobs:
         id: test_phase
         run: npm run test -- --watch=false --browsers=ChromeHeadless
 
-      - name: Get this run's id
-        id: get_run_id
-        run: echo "::set-output name=jobsrunid::${{ github.run_id }}"
-      
-      - run: echo ${{ github.run_id }}
-      
       - name: Check if tests were successful and exit on failure
         if: ${{ failure() && steps.test_phase.conclusion == 'failure' }}
         run: exit 1
@@ -80,7 +70,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
       
-      #- name: Job's running time
+      #- name: Job's running time !!!!!this approach DOESN'T WORK!!!! because .run_duration_ms parameter awailable only after this workflow completion and accessible only from other actions, which isn't possible according to this test task conditions (I can't create additional yaml files)
       #  id: execution_time
       #  run: |
       #    curl \
@@ -88,56 +78,21 @@ jobs:
       #      -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
       #      https://api.github.com/repos/${{ github.actor }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/timing
 
-      #---Email notifications v1---
-      - name: Send email notifications for this job
-        if: ${{ always() }} #run this step even if any previous step failed
-        uses: dawidd6/action-send-mail@6d23605227c578d570e5594931720f85a1af55a2
-        with:
-          # SMTP server address
-          server_address: ${{secrets.MAIL_SERVER}}
-          # SMTP server port
-          server_port: 465 #587
-          # Authenticate as this user to SMTP server
-          username: ${{secrets.MAIL_USERNAME}}
-          # Authenticate with this password to SMTP server
-          password: ${{secrets.MAIL_PASSWORD}}
-          # Subject of mail message
-          subject: Github Actions job result
-          # Recipients mail addresses (separated with comma)
-          to: ave.alexey@gmail.com
-          # Full name of mail sender (might be with an email address specified in <>)
-          from: Github CI
-          # Whether this connection use TLS (default is true if server_port is 465)
-          secure: true
-          # Body of mail message (might be a filename prefixed with file:// to read from)
-          body: Build job of ${{github.repository}} completed. Result status ${{job.status}}. #Result conclusion ${{job.conclusion}}
-          # Allow unsigned/invalid certificates
-          ignore_cert: true
-          # Convert body from Markdown to HTML (set content_type input as text/html too)
-          #convert_markdown: # optional
-          # Files that will be added to mail message attachments (separated with comma)
-          #attachments: # optional
-          # Set Priority level for the mail message to 'high', 'normal' (default) or 'low'
-          #priority: # optional
       
   stats_job:
     runs-on: ubuntu-latest
     needs: main_job
     steps:
-      - name: Email job running time
-        id: execution_time
+      - name:  Extract job starting & ending time
+        id: execution_timestamps
         run: |
           echo "::set-output name=starttime::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[0].started_at')" && echo "::set-output name=endtime::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[0].completed_at')"
-        #run: |
-        #  echo "::set-output name=runningtime::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ needs.main_job.outputs.output1 }}/timing | jq '.run_duration_ms')"
-      - name: print variable
-        run: |
-          echo ${{steps.execution_time.outputs.starttime}} && echo ${{steps.execution_time.outputs.endtime}}
+      
       - name: calculate time
         id: calculate_time
         run: |
-          started_at=${{steps.execution_time.outputs.starttime}}
-          completed_at=${{steps.execution_time.outputs.endtime}}
+          started_at=${{steps.execution_timestamps.outputs.starttime}}
+          completed_at=${{steps.execution_timestamps.outputs.endtime}}
 
           START_TIME=$(date -d "$started_at" +%s)
           END_TIME=$(date -d "$completed_at" +%s)
@@ -149,6 +104,7 @@ jobs:
           echo "::set-output name=el_hours::$(($ELAPSE/60/60))"
           echo "::set-output name=el_minutes::$(($ELAPSE/60%60))"
           echo "::set-output name=el_seconds::$(($ELAPSE%60))"
+
       - name: Get job conclusion (success or failure)
         id: job_conclusion
         run: |
@@ -156,7 +112,7 @@ jobs:
 
       #---Email notifications v2 with elapsed time---
       - name: Send email notifications for this job v2
-        if: ${{ always() }} #run this step even if any previous step failed
+        if: ${{ always() }} #run this step even if previous steps failed
         uses: dawidd6/action-send-mail@6d23605227c578d570e5594931720f85a1af55a2
         with:
           # SMTP server address
@@ -172,12 +128,10 @@ jobs:
           # Recipients mail addresses (separated with comma)
           to: ave.alexey@gmail.com
           # Full name of mail sender (might be with an email address specified in <>)
-          from: Github CI
+          from: Github CI v2
           # Whether this connection use TLS (default is true if server_port is 465)
           secure: true
           # Body of mail message (might be a filename prefixed with file:// to read from)
-          body: Build job of ${{github.repository}} completed. Result status ${{steps.job_conclusion.outputs.main_job_conclusion}}. Time ${{steps.calculate_time.outputs.el_hours}}h ${{steps.calculate_time.outputs.el_minutes}}m ${{steps.calculate_time.outputs.el_seconds}}s (Total in seconds ${{steps.calculate_time.outputs.elpsd}}) #Result conclusion ${{job.conclusion}}
+          body: Build job for ${{github.repository}} has completed. Result status ${{steps.job_conclusion.outputs.main_job_conclusion}}. Time ${{steps.calculate_time.outputs.el_hours}}h ${{steps.calculate_time.outputs.el_minutes}}m ${{steps.calculate_time.outputs.el_seconds}}s (${{steps.calculate_time.outputs.elpsd}} seconds)
           # Allow unsigned/invalid certificates
           ignore_cert: true
-          
-        #for email status needs.<job_id>.result
