--- a/angular/Dockerfile
+++ b/angular/Dockerfile
@@ -7,5 +7,19 @@ RUN npm run build
 FROM nginx:alpine
 COPY --from=node /app/dist/angular-starter /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/nginx.conf
+WORKDIR /app
+
+#---switch to non root user---
+RUN chown -R nginx:nginx /app && chmod -R 755 /app && \
+        chown -R nginx:nginx /var/cache/nginx && \
+        chown -R nginx:nginx /var/log/nginx && \
+        chown -R nginx:nginx /etc/nginx/conf.d
+RUN touch /var/run/nginx.pid && \
+        chown -R nginx:nginx /var/run/nginx.pid
+
+USER nginx
+#---
 
 EXPOSE 8080
+
+CMD ["nginx", "-g", "daemon off;"]
