--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -100,8 +100,6 @@ jobs:
           ELAPSE=$(( $END_TIME - $START_TIME ))
           echo $ELAPSE
           echo ${{github.event.pusher.email}}
-          echo $(git log -n 1 --pretty=format:%ae)
-          echo git log -n 1 --pretty=format:%ae
           echo "$(($ELAPSE/60/60))h $(($ELAPSE/60%60))m $(($ELAPSE%60))s"
           echo "::set-output name=elpsd::$ELAPSE"
           echo "::set-output name=el_hours::$(($ELAPSE/60/60))"
@@ -140,7 +138,7 @@ jobs:
           # Subject of mail message
           subject: Github Actions job result
           # Recipients mail addresses (separated with comma)
-          to: ${{steps.fetch_email.outputs.usermail}} #${{github.event.pusher.email}}
+          to: ${{github.event.pusher.email}} #${{steps.fetch_email.outputs.usermail}}
           # Full name of mail sender (might be with an email address specified in <>)
           from: Github CI v2
           # Whether this connection use TLS (default is true if server_port is 465)
