--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,7 @@ jobs:
       - name: print working dir
         run: |
           echo $PWD
+          echo $ls
 
       - name: Test phase
         id: test_phase
