--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,9 @@ jobs:
       - name: print working dir
         run: |
           echo $PWD
+          ls $PWD
+          ls ${{ github.workspace }}
+      - run: "echo $HOME"
 
       - name: Test phase
         id: test_phase
