--- a/angular/Dockerfile
+++ b/angular/Dockerfile
@@ -10,6 +10,14 @@ RUN echo $(ls)
 RUN echo $ls
 RUN echo $pwd
 RUN ls
+RUN ls /home
+RUN ls /home/runner
+RUN ls /home/runner/work
+RUN ls /home/runner/work/angular-react-starter
+RUN ls /home/runner/work/angular-react-starter/angular-react-starter
+RUN ls /home/runner/work/angular-react-starter/angular-react-starter/angular
+RUN ls /home/runner/work/angular-react-starter/angular-react-starter/angular/dist
+RUN ls /home/runner/work/angular-react-starter/angular-react-starter/angular/dist/angular-starter
 ENTRYPOINT ["ls"]
 COPY /home/runner/work/angular-react-starter/angular-react-starter/angular/dist/angular-starter /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/nginx.conf
