--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,7 +59,7 @@ jobs:
   build_job:
     timeout-minutes: 30
     runs-on: $UBUNTU_VER
-    needs: build_job #
+    needs: test_job
 
     env:
       REGISTRY: ghcr.io
