--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,10 +24,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: start time
         id: start
-        run: printf "::set-output name=start_time::$(%(%s)T\n)"
+        run: printf "::set-output name=start_time::$('%(%s)T\n')"
       
       - name: use node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
